# esp32c3-exp

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: blinky.rs
src/: main.rs
